@@ -1,7 +1,7 @@
-#$Id: Gcc.pm 23324 2006-07-21 13:35:50Z wsnyder $
+#$Id: Gcc.pm 31185 2007-02-01 14:40:37Z wsnyder $
 ######################################################################
 #
-# This program is Copyright 2002-2006 by Wilson Snyder.
+# This program is Copyright 2002-2007 by Wilson Snyder.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of either the GNU General Public License or the
@@ -25,7 +25,7 @@ use vars qw(@ISA $Debug);
 @ISA=qw(Make::Cache::Obj);
 *Debug = \$Make::Cache::Obj::Debug;  	# "Import" $Debug
 
-our $VERSION = '1.041';
+our $VERSION = '1.042';
 
 #######################################################################
 ## Methods that superclasses are likely to override
@@ -106,6 +106,7 @@ sub parse_cmds {
 		push @{$self->{cmds_lcl_cpp_run}}, $sw;
 	    }
 	    if ($sw ne "-o"
+		&& $sw ne "-MP"
 		&& $sw ne "-MD"
 		&& $sw ne "-MMD") {
 		push @{$self->{cmds_lcl_cex_run}}, $sw;
@@ -220,7 +221,7 @@ See L<Make::Cache::Obj>
 
 The latest version is available from CPAN and from L<http://www.veripool.com/>.
 
-Copyright 2000-2006 by Wilson Snyder.  This package is free software; you
+Copyright 2000-2007 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License or the Perl Artistic License.
 
