@@ -11,6 +11,7 @@ objcache
 README
 readme.texi
 t/00_pod.t
+t/01_manifest.t
 t/10_runtime.t
 t/20_hash.d
 t/20_hash.t
