@@ -1,7 +1,7 @@
-# $Id: Makefile.PL 14521 2006-02-21 18:52:32Z wsnyder $
+# $Id: Makefile.PL 31185 2007-02-01 14:40:37Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'perl Makefile.PL' to create a Makefile for this package
 #
-# Copyright 2001-2006 by Wilson Snyder.  This program is free software;
+# Copyright 2001-2007 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License or the Perl Artistic License.
 
