@@ -6,7 +6,7 @@ This is the Make::Cache Package.
 1.1 Copyright
 =============
 
-This package is Copyright 2003-2006 by Wilson Snyder
+This package is Copyright 2003-2007 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
