@@ -1,5 +1,5 @@
 \input texinfo @c -*-texinfo-*-
-@c $Id: readme.texi 14521 2006-02-21 18:52:32Z wsnyder $
+@c $Id: readme.texi 31185 2007-02-01 14:40:37Z wsnyder $
 @c %**start of header
 @setfilename readme.info
 @settitle Perl Make::Cache Installation
@@ -26,7 +26,7 @@ This is the Make::Cache Package.
 @node Copyright, Summary, Top, Top
 @section Copyright
 
-This package is Copyright 2003-2006 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 2003-2007 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of either the GNU General Public License or the
