@@ -1,8 +1,8 @@
 #!/usr/bin/perl -w
-# $Id: 00_pod.t 14521 2006-02-21 18:52:32Z wsnyder $
+# $Id: 00_pod.t 31185 2007-02-01 14:40:37Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
-# Copyright 2000-2006 by Wilson Snyder.  This program is free software;
+# Copyright 2000-2007 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License or the Perl Artistic License.
 
