@@ -1,9 +1,9 @@
 #!/usr/bin/perl -w
-#$Id: 97_purify.t 20789 2006-05-24 17:10:53Z wsnyder $
+#$Id: 97_purify.t 31185 2007-02-01 14:40:37Z wsnyder $
 ######################################################################
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
-# Copyright 2002-2006 by Wilson Snyder.  This program is free software;
+# Copyright 2002-2007 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License or the Perl Artistic License.
 ######################################################################
