@@ -1,9 +1,9 @@
 #!/usr/bin/perl -w
-#$Id: fake_purify 20789 2006-05-24 17:10:53Z wsnyder $
+#$Id: fake_purify 31185 2007-02-01 14:40:37Z wsnyder $
 # DESCRIPTION: Wrapper around g++ to emulate purify, etc, wrappers.
 ######################################################################
 #
-# This program is Copyright 2002-2006 by Wilson Snyder.
+# This program is Copyright 2002-2007 by Wilson Snyder.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of either the GNU General Public License or the
