@@ -1,7 +1,7 @@
-# $Id: test_utils.pl 14521 2006-02-21 18:52:32Z wsnyder $
+# $Id: test_utils.pl 31185 2007-02-01 14:40:37Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Common routines required by package tests
 #
-# Copyright 2000-2006 by Wilson Snyder.  This program is free software;
+# Copyright 2000-2007 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License or the Perl Artistic License.
 
